--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "macacamatica",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "homepage" : "http://fellipefingoli.gitlab.io/macacamatica"
   "devDependencies": {
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
