Fix package.json file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "macacamatica",
   "version": "1.0.0",
   "private": true,
-  "homepage" : "http://fellipefingoli.gitlab.io/macacamatica"
+  "homepage" : "http://fellipefingoli.gitlab.io/macacamatica",
   "devDependencies": {
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
